Fixing map image alignment'

--- a/style.css
+++ b/style.css
@@ -1085,7 +1085,7 @@ input[type=submit]:hover {
 }
 
 .about-item {
-    text-align: justify;
+    text-align: center;
     color: #f2f2f2;
     font-family: 'Rajdhani', sans-serif;
     display: flex;
